Adding some more code around getting images and image parameters

--- a/GenscapeTeam8/GenscapeTeam8.csproj
+++ b/GenscapeTeam8/GenscapeTeam8.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImageParametersController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\NotificationsController.cs" />
     <Compile Include="Controllers\SourcesController.cs" />
@@ -189,6 +190,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Sources\Index.cshtml" />
     <Content Include="Views\Notifications\Index.cshtml" />
+    <Content Include="Views\ImageParameters\Index.cshtml" />
+    <Content Include="Views\ImageParameters\GetImageParameters.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
