--- a/Desktop/AForgeHack.Database/AForgeHack.Database.csproj
+++ b/Desktop/AForgeHack.Database/AForgeHack.Database.csproj
@@ -31,10 +31,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework">
-      <Private>True</Private>
+      <HintPath>..\..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer">
-      <Private>True</Private>
+      <HintPath>..\..\packages\EntityFramework.6.1.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -49,6 +49,7 @@
     <Compile Include="Camera.cs" />
     <Compile Include="Event.cs" />
     <Compile Include="Facility.cs" />
+    <Compile Include="HackEntities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WatchPoint.cs" />
   </ItemGroup>
