--- a/Desktop/AforgeHack/packages.config
+++ b/Desktop/AforgeHack/packages.config
@@ -4,5 +4,7 @@
   <package id="AForge.Imaging" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
+  <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Vision" version="2.2.5" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
 </packages>
