--- a/Desktop/AForgeHack.Database/AForgeHack.Database.csproj
+++ b/Desktop/AForgeHack.Database/AForgeHack.Database.csproj
@@ -50,12 +50,22 @@
     <Compile Include="Event.cs" />
     <Compile Include="Facility.cs" />
     <Compile Include="HackEntities.cs" />
+    <Compile Include="Migrations\201403200445204_InitialCreate.cs" />
+    <Compile Include="Migrations\201403200445204_InitialCreate.Designer.cs">
+      <DependentUpon>201403200445204_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WatchPoint.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201403200445204_InitialCreate.resx">
+      <DependentUpon>201403200445204_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
